# Game_engine

./: .gitignore  CLAUDE.md  CMakeLists.txt  TODO.md  compile_commands.json
assets/scenes/: MainScene.json
assets/scripts/: example.lua
docs/: EDITOR.md  GAMEPLAY_SYSTEMS.md  OVERVIEW.md  RENDERING.md
include/audio/: AudioListener.h  AudioManager.h  AudioSource.h
include/core/: Application.h  Camera.h  Component.h  EditorLayer.h  GameObject.h  Scene.h  SceneSerializer.h  Transform.h
include/editor/: EditorLayer.h  FilePicker.h  UndoManager.h
include/glad/: gl.h
include/graphics/: Light.h  Material.h
include/physics/: Collider.h  IPhysicsSystem.h  JoltPhysicsSystem.h  PhysicsMaterial.h  PhysicsSystem.h  PhysicsWorld.h  Rigidbody.h
include/platform/: Input.h
include/renderer/: AnimationClip.h  FBXLoader.h  GLTFLoader.h  LightData.h  Mesh.h  MeshRenderer.h  OBJLoader.h  Renderer.h  Shader.h  ShadowMap.h  Skeleton.h  SkinnedMeshRenderer.h  Skybox.h  Texture.h
include/rhi/: RHI.h
include/rhi/dx11/: DX11Context.h  DX11Debug.h  DX11Mesh.h  DX11PointShadow.h  DX11Shader.h  DX11ShadowMap.h  DX11Skybox.h  DX11Texture.h
include/rhi/opengl/: GLMesh.h  GLShader.h  GLTexture.h
include/scripting/: LuaManager.h  LuaScript.h
include/ui/: UICanvas.h  UIElement.h  UIImage.h  UILabel.h  UILayer.h  UITypes.h
shaders/depth/: depth.vert
shaders/dx11/: bloom_blur.hlsl  bloom_threshold.hlsl  brdf_lut.hlsl  depth.hlsl  gpass.hlsl  irradiance.hlsl  point_shadow.hlsl  prefilter.hlsl  sky_to_cube.hlsl  skybox.hlsl  ssao.hlsl  ssao_blur.hlsl  standard.hlsl  tonemap.hlsl
shaders/postprocess/: tonemap.frag  tonemap.vert
shaders/skybox/: skybox.frag  skybox.vert
shaders/standard/: default.frag  default.vert
src/: glad.c  main.cpp
src/audio/: AudioListener.cpp  AudioManager.cpp  AudioSource.cpp
src/core/: Application.cpp  ApplicationInit.cpp  ApplicationLoop.cpp  ApplicationPlayMode.cpp  ApplicationScene.cpp  Camera.cpp  GameObject.cpp  PhysicsSystem.cpp  Scene.cpp  SceneSerializer.cpp  Transform.cpp
src/editor/: EditorAssetBrowser.cpp  EditorDialogs.cpp  EditorGizmo.cpp  EditorHierarchy.cpp  EditorInspector.cpp  EditorLayer.cpp  EditorMenuBar.cpp  EditorSceneViewport.cpp  FilePicker.cpp  UndoManager.cpp
src/physics/: Collider.cpp  JoltPhysicsSystem.cpp  PhysicsWorld.cpp  Rigidbody.cpp
src/platform/: Input.cpp
src/renderer/: FBXLoader.cpp  GLTFLoader.cpp  MeshRenderer.cpp  OBJLoader.cpp  Renderer.cpp  RendererBloom.cpp  RendererHDR.cpp  RendererIBL.cpp  RendererSSAO.cpp  RendererScene.cpp  RendererShadow.cpp  RendererState.h  ShadowMap.cpp  SkinnedMeshRenderer.cpp  Skybox.cpp
src/rhi/: RHI.cpp
src/rhi/dx11/: DX11Context.cpp  DX11Mesh.cpp  DX11PointShadow.cpp  DX11Shader.cpp  DX11ShadowMap.cpp  DX11Skybox.cpp  DX11Texture.cpp
src/rhi/opengl/: GLMesh.cpp  GLShader.cpp  GLTexture.cpp
src/scripting/: LuaManager.cpp  LuaScript.cpp
src/ui/: UICanvas.cpp  UIImage.cpp  UILabel.cpp  UILayer.cpp
